# betlang

./: .gitignore  ANCHOR.scope-arrest.2026-01-01.Jewell.scm  AUTHORITY_STACK.mustfile-nickel.scm  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  MAINTAINERS.md  META.scm  README.adoc  README.md  SPEC.core.scm  STATE.scm  codemeta.json  justfile
.github/workflows/: codeql.yml  guix-nix-policy.yml  npm-bun-blocker.yml  quality.yml  release.yml  rsr-antipattern.yml  security-policy.yml  test.yml  wellknown-enforcement.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: dc.xml
bindings/julia/: Project.toml
bindings/julia/src/: Betlang.jl  lib.rs
compiler/bet-check/: Cargo.toml
compiler/bet-check/src/: lib.rs
compiler/bet-codegen/src/: lib.rs
compiler/bet-core/src/: lib.rs
compiler/bet-eval/src/: lib.rs
compiler/bet-parse/src/: grammar.lalrpop  lexer.rs  lib.rs
compiler/bet-syntax/src/: ast.rs  lib.rs
conformance/: deterministic.rkt  smoke.bet  stochastic-seeded.rkt
core/: betlang.rkt
docs/: CITATIONS.adoc  semantics.md  tutorial.md
editors/vscode/: package.json
editors/vscode/src/: extension.ts
lib/: ternary.rkt
repl/: shell.rkt
runtime/bet-rand/src/: lib.rs
runtime/bet-rt/: Cargo.toml
runtime/bet-rt/src/: data.rs  io.rs  lib.rs  value.rs
runtime/bet-viz/src/: lib.rs
tests/: basics.rkt
tools/bet-cli/: Cargo.toml
tools/bet-cli/src/: main.rs
ui/: deno.json
